fixed bugs and worked on updates

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <title>Clone Admin Panel</title>
+    <title>ShudhLove Admin Panel</title>
   </head>
   <body>
     <div id="root"></div>
